--- a/style2.css
+++ b/style2.css
@@ -24,7 +24,7 @@ body {
 
 .main-content h1 {
   font-size: 50px;
-  font-weight: bold;
+  font-weight: 300;
   color: #1a1c78;
 }
 
@@ -57,6 +57,7 @@ body {
   font-size: 1.5rem;
   margin-bottom: 15px;
   color: #1a1c78;
+  font-weight: 400;
 }
 
 .objectives-list {
@@ -87,7 +88,7 @@ body {
   color: white;
   /* min-height: 100vh; */
   position: sticky;
-  top: 0;
+  top: 20px;
   right: 150px;
 }
 
@@ -95,6 +96,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .sidebar .nav-item {
@@ -146,7 +148,7 @@ body {
 
 .table-section {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding:20px;
 }
 
 
