--- a/style2.css
+++ b/style2.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
- font-family:'DM Sans', sans-serif;
+* {
+  
 }
-
 body {
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
