--- a/style.css
+++ b/style.css
@@ -30,9 +30,56 @@ body {
     position: relative;
   width: 100%;
   overflow: hidden;
-  padding: 10px 25px; /* spacing for arrows */
+  padding: 10px 25px ; /* spacing for arrows */
   box-sizing: border-box;
   /* background-color: #CCCCCC; */
+}
+.student-card {
+    margin: 0 15px;
+    display: inline-block;
+    text-align: center;
+    min-width: 200px;
+  flex-shrink: 0;
+  border-radius: 8px;
+}
+
+.student-card img {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.slider-wrapper {
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+
+.slider {
+  display: flex;
+  gap: 8px;
+}
+
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background-color: #1a1c78;
+  color: white;
+  border: none;
+  font-size: 1rem;
+  padding: 8px 10px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.arrow.left {
+  left: 10px;
+}
+
+.arrow.right {
+  right: 10px;
 }
 
 .marquee-title h1 {
@@ -91,21 +138,6 @@ body {
 }
 
 /* Student Cards */
-.student-card {
-    margin: 0 15px;
-    display: inline-block;
-    text-align: center;
-    min-width: 200px;
-  flex-shrink: 0;
-  border-radius: 8px;
-}
-
-.student-card img {
-    width: 130px;
-    height: 130px;
-    border-radius: 50%;
-    object-fit: cover;
-}
 
 .placement-heading {
     font-size: 45px;
@@ -134,10 +166,14 @@ body {
 }
 
 .stat-box {
-  text-align: center;
+  /* text-align: center; */
+  display:flex;
   margin-bottom: 50px;
-  flex: 1 1 200px; /* allow resizing */
+  flex: 1; /* allow resizing */
   max-width: 300px;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .stat-box h2 {
@@ -229,7 +265,7 @@ body {
 
 .slider {
   display: flex;
-  gap: 10px;
+  gap: 8px;
 }
 
 
@@ -1025,6 +1061,47 @@ th {
   display: block;
 }
 
+.section-title {
+      text-align: center;
+      font-family: Arial, sans-serif;
+      font-size: 35px;
+      font-weight: 300;
+      color: #2E3192; /* Deep blue color */
+      position: relative;
+      display: inline-block;
+    }
+
+    .underline {
+      height: 3px;
+      width: 150px;
+      background-color: #2E3192;
+      margin: 8px auto 0;
+      position: relative;
+      margin-bottom: 10px;
+    }
+
+    .underline::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      width: 20px;
+      height: 200px;
+      background-color: #D1143E; /* Red bar */
+      border-radius: 4px;
+      animation: moveBar 3s linear infinite;
+    }
+
+    @keyframes moveBar {
+      0%   { left: 0%; }
+      50%  { left: calc(100% - 20px); }
+      100% { left: 0%; }
+    }
+
+    .title-wrapper {
+      text-align: center;
+      margin-top: 50px;
+    }
+
 
 @media (max-width: 1024px) {
   .layout-wrapper {
@@ -1112,6 +1189,16 @@ th {
     padding: 0 15px;
   }
 
+  .event-grid {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(300px, 1fr)); /* 3 per row, responsive */
+  gap: 20px;
+  padding: 20px 20px;
+  /* background-color: #f5f5f5; */
+  z-index: 100000000000;
+  width: 100%;
+}
+
   .main-content {
     padding-right: 0;
   }
@@ -1141,6 +1228,11 @@ th {
   .stat-box h2 {
     font-size: 1.1rem;
     margin-top: 10px;
+  }
+  .stat-box p {
+    font-size: 1.1rem;
+    /* text-align: center; */
+    margin: 10px auto;
   }
 
   .counter {
@@ -1184,7 +1276,7 @@ th {
   }
 
   .student-card {
-    min-width: 160px;
+    min-width: 150px;
   }
 
   .student-card img {
